--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="       crossorigin="anonymous"       referrerpolicy="no-referrer"     />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
-    
+    <header>
+        <div class="headcont">
+          <img class="LOGO123" src="LOGO123.png" alt="LOGO123">
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Abaut us</a>
+            <a href="#">Product</a>
+        </nav>
+        <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
+        </div>
+    </header>
+    <section>
+        <div class="mountains"></div>
+        <div class="mountains-conteiner">
+            <h2>Discover Georgia</h2>
+            <h2>Learn more about Georgia</h2>
+        </div>
+    </section>
 </body>
 </html>
