--- a/page2/page2.html
+++ b/page2/page2.html
@@ -4,46 +4,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="       crossorigin="anonymous"       referrerpolicy="no-referrer"     />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DiscoverGeorgia</title>
-    <link rel="stylesheet" href="css/global.css">
+    <title>Place To Visit</title>
+    <link rel="stylesheet" href="../css/global.css">
 </head>
 <body>
     <header>
         <div class="headcont">
           <img class="LOGO123" src="/photos/LOGO123.png" alt="LOGO123">
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="/page2/page2.html">Place To Visit</a>
+            <a href="/index.html">Home</a>
+            <a href="#">Place To Visit</a>
             <a href="#">Product</a>
             <a href="/singin.page/singin.html">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
         </div>
     </header>
-
     <section>
-        <div class="mountains">
+        <div class=""></div>
+        <div class="">
             <h2>Discover Georgia</h2>
-            <p>Learn more about Georgia</p>
-            <a href="/page2/page2.html">Discover</a>
+            <h2>Learn more about Georgia</h2>
         </div>
     </section>
-
-    <section class="container">
-        <div class="line">
-            <div class="leftline"></div>
-            <h2>Beautiful Place</h2>
-            <div class="rightline"></div>
-        </div>
-        <div class="boxx">
-            <img src="" alt="">
-            <h3></h3>
-            <img src="" alt="">
-            <h3></h3>
-            <img src="" alt="">
-            <h3></h3>
-        </div>
-    </section>
-
 </body>
 </html>
