--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="/page2/page2.html">Place To Visit</a>
-            <a href="#">Product</a>
+            <a href="/page3/page3.html">Ski resorts Georgia</a>
             <a href="/singin.page/singin.html">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
@@ -32,18 +32,41 @@
     <section class="container">
         <div class="line">
             <div class="leftline"></div>
-            <h2>Beautiful Place</h2>
+            <h2>Sightseeings Georgia</h2>
             <div class="rightline"></div>
         </div>
-        <div class="boxx">
-            <img src="" alt="">
-            <h3></h3>
-            <img src="" alt="">
-            <h3></h3>
-            <img src="" alt="">
-            <h3></h3>
+
+         <div class="boxx">
+        <div>
+            <img src="/photos/gergeti.jpg" alt="gergeti">
+            <h3>Gergeti Trinity Church</h3>
+        </div>
+        <div>
+            <img src="/photos/svaneti-towers.jpg" alt="svaneti-towers">
+            <h3>Svan towers</h3>
+        </div>
+        <div>
+            <img src="/photos/Martvili-Canyon.jpg" alt="Martvili Canyon">
+            <h3>Martvili Canyon</h3> 
+        </div>
         </div>
     </section>
-
+    <footer>
+        <div class="left">
+            <img src="/photos/LOGO123Copy.png" alt="LOGO123">
+            <ul>
+                <li>Home</li>
+                <li>Place To Visit</li>
+                <li>Ski resorts Georgia</li>
+                <li>Login</li>
+            </ul>
+            <div class="Geo">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Georgia</p>
+            </div>
+        </div>
+        <div class="help"></div>
+        <div class="cont"></div>
+    </footer>
 </body>
 </html>
