--- a/page2/page2.html
+++ b/page2/page2.html
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <a href="/index.html">Home</a>
             <a href="#">Place To Visit</a>
-            <a href="#">Product</a>
+            <a href="/page3/page3.html">Ski resorts Georgia</a>
             <a href="/singin.page/singin.html">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
