--- a/singin.page/singin.html
+++ b/singin.page/singin.html
@@ -7,7 +7,6 @@
     <title>DG Login</title>
     <link rel="stylesheet" href="../css/global.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
 </head>
 <body>
     <header>
@@ -16,7 +15,7 @@
         <nav class="navigation">
             <a href="/index.html">Home</a>
             <a href="/page2/page2.html">Place To Visit</a>
-            <a href="#">Product</a>
+            <a href="/page3/page3.html">Ski resorts Georgia</a>
             <a href="#">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
