--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <footer>
         <div class="left">
-            <img src="/photos/LOGO123Copy.png" alt="LOGO123">
+            <a href="#"><img src="/photos/LOGO123Copy.png" alt="LOGO123"></a>
             <ul>
                 <li>Home</li>
                 <li>Place To Visit</li>
@@ -65,8 +65,32 @@
                 <p>Georgia</p>
             </div>
         </div>
-        <div class="help"></div>
-        <div class="cont"></div>
+        <div class="help">
+            <h3>Help</h3>
+            <div class="line"></div>
+            <ul>
+                <li>FAQ</li>
+                <li>Donate methods</li>
+                <a href="https://www.tbceducation.ge/"><img src="/photos/TBC_Bank_logo.png" alt="TBC_Bank_logo"></a>
+            </ul>
+        </div>
+        <div class="cont">
+            <h3>Contact</h3>
+            <div class="line"></div>
+            <ul>
+                <li>Instagram</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+            </ul>
+        </div>
+    <div class="searchbox">
+        <div class="search">
+            <input type="text" placeholder="Enter your email here...">
+            <a href="#">
+                <i class="fas fa-search"></i>
+            </a>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
