--- a/page2/page2.html
+++ b/page2/page2.html
@@ -27,5 +27,46 @@
             <h2>Learn more about Georgia</h2>
         </div>
     </section>
+    <footer>
+        <div class="left">
+            <a href="#"><img src="/photos/LOGO123Copy.png" alt="LOGO123"></a>
+            <ul>
+                <li>Home</li>
+                <li>Place To Visit</li>
+                <li>Ski resorts Georgia</li>
+                <li>Login</li>
+            </ul>
+            <div class="Geo">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Georgia</p>
+            </div>
+        </div>
+        <div class="help">
+            <h3>Help</h3>
+            <div class="line"></div>
+            <ul>
+                <li>FAQ</li>
+                <li>Donate methods</li>
+                <a href="https://www.tbceducation.ge/"><img src="/photos/TBC_Bank_logo.png" alt="TBC_Bank_logo"></a>
+            </ul>
+        </div>
+        <div class="cont">
+            <h3>Contact</h3>
+            <div class="line"></div>
+            <ul>
+                <li>Instagram</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+            </ul>
+        </div>
+    <div class="searchbox">
+        <div class="search">
+            <input type="text" placeholder="Enter your email here...">
+            <a href="#">
+                <i class="fas fa-search"></i>
+            </a>
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
