--- a/page3/page3.html
+++ b/page3/page3.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div class="headcont">
-          <img class="LOGO123" src="/photos/LOGO123.png" alt="LOGO123">
+            <a href="../index.html"><img class="LOGO123" src="/photos/LOGO123Copy.png" alt="LOGO123"></a>
         <nav class="navigation">
             <a href="/index.html">Home</a>
-            <a href="/page2/page2.html">Place To Visit</a>
+            <a href="/page2/page2.html">Places To Visit</a>
             <a href="#">Ski resorts Georgia</a>
             <a href="/singin.page/singin.html">Login</a>
         </nav>
@@ -37,7 +37,7 @@
         <div class="centralbox">
         <div class="boxxx1">
             <div>
-                <img src="/photos/bakuriani.jpg" alt="bakuriani">
+                <a href="/page5/pageBKR.html"><img src="/photos/bakuriani.jpg" alt="bakuriani"></a>
                 <h3>Bakuriani ski resort</h3> 
                 <p>height 1,700 m</p>
             </div>            <div>
@@ -49,20 +49,6 @@
                 <h3>Goderdzi ski resort</h3>
                 <p>height 2,350 m</p> 
             </div>
-
-            <div class="boxxx2">
-                <img src="/photos/Tetnuldi.jpg" alt="Tetnuldi">
-                <h3>Tetnuldi ski resort</h3> 
-                <p>height 4,858 m</p>
-            </div>            <div>
-                <img src="/photos/hatsvali.jpg" alt="Hatsvali">
-                <h3>Hatsvali ski resort</h3> 
-                <p>height 2,347 m</p>
-            </div>            <div>
-                <img src="/photos/bakhmaro.png" alt="bakhmaro">
-                <h3>Bakhmaro ski resort</h3>
-                <p>height 2,050 m</p>
-          </div>
         </div>
     </section>
     
