--- a/page4/pageGTCH.html
+++ b/page4/pageGTCH.html
@@ -10,7 +10,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Places To Visit</title>
+    <title>Gergeti Trinity Church</title>
     <link rel="stylesheet" href="../css/global.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         /></a>
         <nav class="navigation">
           <a href="/index.html">Home</a>
-          <a href="#">Places To Visit</a>
+          <a href="/page2/page2.html">Places To Visit</a>
           <a href="/page3/page3.html">Ski resorts Georgia</a>
           <a href="/singin.page/singin.html">Login</a>
         </nav>
@@ -29,78 +29,40 @@
       </div>
     </header>
     <section>
-      <div class="meinimg">
-        <h2>Places To Visit</h2>
+      <div class="gergeti-img">
+        <h2>Gergeti Trinity Church</h2>
       </div>
     </section>
-
-    <section class="container">
-      <div class="line">
-        <div class="leftline"></div>
-        <h2>Fascinating Places</h2>
-        <div class="rightline"></div>
+    <section class="centralcont">
+      <div class="centralbox1">
+        <ul>
+          <li>Home / Sightseeings Georgia / Gergeti Trinity Church</li>
+        </ul>
+        <img src="/photos/gergeti.jpg" alt="gergeti" />
       </div>
-
-<section class="list">
-      <div class="zemo">
-        <div>
-          <img src="/photos/Tbilisi1.jpg" alt="tbilisi" />
-          <h3>tbilisi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/svaneti-towers.jpg" alt="svaneti" />
-          <h3>Svetitskhoveli Cathedral (Mtskheta)</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/Georgia Gori.jpg" alt="Georgia Gori" />
-          <h3>Georgia Gori</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="shua">
-        <div>
-          <img src="/photos/10_Gergeti.jpg" alt="Gergeti Trinity Church
-          " />
-          <h3>Gergeti Trinity Church</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/526976569_medium.jpg" alt="Vardzia"/>
-          <h3>Vardzia</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/USS.jpg" alt="Batumi"/>
-          <h3>Batumi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="qvemo">
-        <div>
-          <img src="/photos/Sighnagi_2009.jpg" alt="Signagi" />
-          <h3>Signagi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/mzovreti-monastery-dzama-gorge-1.jpg" alt="Dzamas Kheoba" />
-          <h3>Dzamas Kheoba</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/xi-1024x639.jpg" alt="Gelati Monastery" />
-          <h3>Gelati Monastery (Kutaisi)</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="cubes">
-        <div class="N1">1</div>
-        <div class="N2">2</div>
-        <div class="N3">3</div>
-      </div>
-</section>
-
+      <div class="centralbox2">
+        <h3>History</h3>
+        <p>
+          The Gergeti Trinity Church was built in the 14th century by an unknown
+          architect, and is the only cross-cupola church in Khevi province. The
+          separate belltower dates from the same period as the church itself,
+          but built somewhat later. Its isolated location on top of a steep
+          mountain surrounded by the vastness of nature has made it a symbol for
+          Georgia. The 18th century Georgian author Vakhushti Batonishvili wrote
+          that in times of danger, precious relics from Mtskheta, including
+          Saint Nino's Cross were brought here for safekeeping. During the
+          Soviet era, all religious services were prohibited, but the church
+          remained a popular tourist destination. The church is now an active
+          establishment of the Georgian Orthodox and Apostolic Church. The
+          church is a popular waypoint for trekkers in the area, and can be
+          reached by a steep 1.5 hour climb up the mountain. By December 2018 a
+          paved/tarmac road has been laid up to the base of the church,
+          accessible by any normal car. Since 2021, a landslide has prevented
+          paved road access, and a unpaved road (requiring a 4WD) has been used
+          instead.
+        </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.7016458816483!2d44.619667211285254!3d42.66231456992607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40453520a17380d1%3A0x55c4d04cee035728!2sGergeti%20Trinity%20Church!5e1!3m2!1sen!2sge!4v1703435061984!5m2!1sen!2sge" width="850" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
     <footer>
       <div class="left">
         <a href="#"><img src="/photos/LOGO123Copy.png" alt="LOGO123" /></a>
