--- a/page5/pageBKR.html
+++ b/page5/pageBKR.html
@@ -10,7 +10,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Places To Visit</title>
+    <title>Bakuriani ski resort</title>
     <link rel="stylesheet" href="../css/global.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         /></a>
         <nav class="navigation">
           <a href="/index.html">Home</a>
-          <a href="#">Places To Visit</a>
+          <a href="/page2/page2.html">Places To Visit</a>
           <a href="/page3/page3.html">Ski resorts Georgia</a>
           <a href="/singin.page/singin.html">Login</a>
         </nav>
@@ -29,78 +29,27 @@
       </div>
     </header>
     <section>
-      <div class="meinimg">
-        <h2>Places To Visit</h2>
+      <div class="Bakuriani-img">
+        <h2>Bakuriani ski resort</h2>
       </div>
     </section>
+    <section class="centralcont">
+      <div class="centralbox1">
+          <ul>
+            <li>Home / Ski resorts in Georgia / Bakuriani ski resort</li>
+          </ul>
+          <img src="/photos/Bakuriani-img2.jpg" alt="Bakuriani"/>
+      </div>
+        <div class="centralbox2">
+          <h3>History</h3>
+          <p>
+            Bakuriani is the country oldest winter resort, with two centuries of history. Today, it is a world-class mountain & ski center with the perfect environment for Winter Olympic sports and amateur skiers alike in the colder months, and extreme mountain sports or family-friendly vacations in the summer.
+          </p>
+          <h4>The Location of Bakuriani</h4>
+          <p>Bakuriani Ski Resort is located 1,700 meters above sea level, in the Borjomi Municipality of southern Georgia. It is 180 kilometers from Tbilisi, and you can get there by car or by minibus.
 
-    <section class="container">
-      <div class="line">
-        <div class="leftline"></div>
-        <h2>Fascinating Places</h2>
-        <div class="rightline"></div>
-      </div>
-
-<section class="list">
-      <div class="zemo">
-        <div>
-          <img src="/photos/Tbilisi1.jpg" alt="tbilisi" />
-          <h3>tbilisi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/svaneti-towers.jpg" alt="svaneti" />
-          <h3>Svetitskhoveli Cathedral (Mtskheta)</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/Georgia Gori.jpg" alt="Georgia Gori" />
-          <h3>Georgia Gori</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="shua">
-        <div>
-          <img src="/photos/10_Gergeti.jpg" alt="Gergeti Trinity Church
-          " />
-          <h3>Gergeti Trinity Church</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/526976569_medium.jpg" alt="Vardzia"/>
-          <h3>Vardzia</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/USS.jpg" alt="Batumi"/>
-          <h3>Batumi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="qvemo">
-        <div>
-          <img src="/photos/Sighnagi_2009.jpg" alt="Signagi" />
-          <h3>Signagi</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/mzovreti-monastery-dzama-gorge-1.jpg" alt="Dzamas Kheoba" />
-          <h3>Dzamas Kheoba</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-        <div>
-          <img src="/photos/xi-1024x639.jpg" alt="Gelati Monastery" />
-          <h3>Gelati Monastery (Kutaisi)</h3>
-          <a href=""><p>See more</p></a>
-        </div>
-      </div>
-      <div class="cubes">
-        <div class="N1">1</div>
-        <div class="N2">2</div>
-        <div class="N3">3</div>
-      </div>
-</section>
-
+            If you are headed to Bakuriani from Borjomi, there is a small railway where you will find the “kukushka” train, which will take you 37 kilometers through the lovely Borjomistskali River valley. There is also a railway bridge here that was built based on plans drawn up by Gustave Eiffel!</p>
+        </section>
     <footer>
       <div class="left">
         <a href="#"><img src="/photos/LOGO123Copy.png" alt="LOGO123" /></a>
