--- a/singin.page/singin.html
+++ b/singin.page/singin.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <div class="headcont">
-          <img class="LOGO123" src="/photos/LOGO123.png" alt="LOGO123">
+            <a href="../index.html"><img class="LOGO123" src="/photos/LOGO123Copy.png" alt="LOGO123"></a>
         <nav class="navigation">
             <a href="/index.html">Home</a>
-            <a href="/page2/page2.html">Place To Visit</a>
+            <a href="/page2/page2.html">Places To Visit</a>
             <a href="/page3/page3.html">Ski resorts Georgia</a>
             <a href="#">Login</a>
         </nav>
