--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <a href="/singin.page/singin.html">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
+        <div class="icon2"><i class="fa-solid fa-bars fa-2xl" style="color: #000000;"></i></div>
       </div>
     </header>
 
