--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   <body>
     <header>
       <div class="headcont">
-        <a href="../index.html"><img class="LOGO123" src="/photos/LOGO123Copy.png" alt="LOGO123"/></a>
+        <a href="../index.html"
+          ><img class="LOGO123" src="/photos/LOGO123Copy.png" alt="LOGO123"
+        /></a>
+        <label for="turn" class="bar">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="turn" />
         <nav class="navigation">
           <a href="#">Home</a>
           <a href="/page2/page2.html">Places To Visit</a>
@@ -24,7 +30,6 @@
           <a href="/singin.page/singin.html">Login</a>
         </nav>
         <div class="icon1"><i class="fa-solid fa-location-dot"></i></div>
-        <div class="icon2"><i class="fa-solid fa-bars fa-2xl" style="color: #000000;"></i></div>
       </div>
     </header>
 
@@ -45,7 +50,7 @@
 
       <div class="boxx">
         <div>
-          <a href="/page4/pageGTCH.html"><img src="/photos/gergeti.jpg" alt="gergeti" /></a>
+          <a href="/page4/pageGTCH.html"><img src="/photos/gergeti.jpg" alt="gergeti"/></a>
           <h3>Gergeti Trinity Church</h3>
         </div>
         <div>
@@ -58,6 +63,7 @@
         </div>
       </div>
     </section>
+
     <footer>
       <div class="left">
         <a href="#"><img src="/photos/LOGO123Copy.png" alt="LOGO123" /></a>
