--- a/page2/page2.html
+++ b/page2/page2.html
@@ -45,12 +45,12 @@
       <div class="zemo">
         <div>
           <img src="/photos/Tbilisi1.jpg" alt="tbilisi" />
-          <h3>tbilisi</h3>
+          <h3>Tbilisi</h3>
           <a href=""><p>See more</p></a>
         </div>
         <div>
           <img src="/photos/svaneti-towers.jpg" alt="svaneti" />
-          <h3>Svetitskhoveli Cathedral (Mtskheta)</h3>
+          <h3>Svetitskhoveli Cathedral </h3>
           <a href=""><p>See more</p></a>
         </div>
         <div>
